<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.RegisterActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/register_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appnamebottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/apptitle"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_icon" />

        <TextView
            android:id="@+id/app_name_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/appnamedesc"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appnamebottom" />

        <TextView
            android:id="@+id/register_email_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/login_email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ed_register_email"
            app:layout_constraintTop_toBottomOf="@+id/app_name_desc" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/email"
            app:layout_constraintBottom_toBottomOf="@+id/ed_register_email"
            app:layout_constraintStart_toStartOf="@+id/ed_register_email"
            app:layout_constraintTop_toTopOf="@+id/ed_register_email" />

        <com.dicoding.picodiploma.nusvarna.customviews.BasicEditText
            android:id="@+id/ed_register_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins"
            android:paddingRight="10dp"
            android:paddingLeft="40dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_desc" />

        <TextView
            android:id="@+id/register_full_name_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_register_full_name"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/orang"
            app:layout_constraintBottom_toBottomOf="@+id/ed_register_full_name"
            app:layout_constraintStart_toStartOf="@+id/ed_register_full_name"
            app:layout_constraintTop_toTopOf="@+id/ed_register_full_name" />

        <com.dicoding.picodiploma.nusvarna.customviews.BasicEditText
            android:id="@+id/ed_register_full_name"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/poppins"
            android:paddingRight="10dp"
            android:paddingLeft="40dp"
            android:hint="Nama Lengkap"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_email"
            app:layout_constraintStart_toStartOf="@+id/ed_register_email"
            app:layout_constraintTop_toBottomOf="@+id/register_full_name_desc" />

        <TextView
            android:id="@+id/register_username_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_register_full_name"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_full_name" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/orang"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/ed_register_username"
            app:layout_constraintStart_toStartOf="@+id/ed_register_username"
            app:layout_constraintTop_toTopOf="@+id/ed_register_username" />

        <com.dicoding.picodiploma.nusvarna.customviews.BasicEditText
            android:id="@+id/ed_register_username"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/poppins"
            android:paddingRight="10dp"
            android:paddingLeft="40dp"
            android:hint="Username"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_full_name"
            app:layout_constraintStart_toStartOf="@+id/ed_register_full_name"
            app:layout_constraintTop_toBottomOf="@+id/register_username_desc" />


        <TextView
            android:id="@+id/register_pass_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/login_pass"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_register_username"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_username" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/password"
            app:layout_constraintBottom_toBottomOf="@+id/ed_register_pass"
            app:layout_constraintStart_toStartOf="@+id/ed_register_pass"
            app:layout_constraintTop_toTopOf="@+id/ed_register_pass" />

        <com.dicoding.picodiploma.nusvarna.customviews.PassEditText
            android:id="@+id/ed_register_pass"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            android:paddingRight="10dp"
            android:paddingLeft="40dp"
            android:hint="Password"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_username"
            app:layout_constraintStart_toStartOf="@+id/register_pass_desc"
            app:layout_constraintTop_toBottomOf="@id/register_pass_desc" />

        <TextView
            android:id="@+id/register_confirmpass_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/confirm_pass"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_register_pass"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_pass" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/ed_register_confirmpass"
            app:layout_constraintStart_toStartOf="@+id/ed_register_confirmpass"
            app:layout_constraintTop_toTopOf="@+id/ed_register_confirmpass" />

        <com.dicoding.picodiploma.nusvarna.customviews.PassEditText
            android:id="@+id/ed_register_confirmpass"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            android:paddingRight="10dp"
            android:paddingLeft="40dp"
            android:hint="Masukkan Ulang Password"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_username"
            app:layout_constraintStart_toStartOf="@+id/register_pass_desc"
            app:layout_constraintTop_toBottomOf="@id/register_confirmpass_desc" />

        <com.dicoding.picodiploma.nusvarna.customviews.MyRegButton
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@id/forgot_your_pass"
            app:layout_constraintEnd_toEndOf="@+id/ed_register_confirmpass"
            app:layout_constraintStart_toStartOf="@+id/ed_register_confirmpass"
            app:layout_constraintTop_toBottomOf="@+id/ed_register_confirmpass" />

        <TextView
            android:id="@+id/forgot_your_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sudah_memiliki_akun"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/register_button"
            app:layout_constraintStart_toStartOf="@+id/register_button"
            app:layout_constraintTop_toBottomOf="@+id/register_button" />

        <TextView
            android:id="@+id/go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textColor="@color/main"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/forgot_your_pass"
            app:layout_constraintStart_toEndOf="@+id/forgot_your_pass"
            app:layout_constraintTop_toTopOf="@+id/forgot_your_pass" />

        <ProgressBar
            android:id="@+id/register_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>