<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="137dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/appnamebottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/berkshire_swash"
            android:text="@string/apptitle"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_icon" />

        <TextView
            android:id="@+id/app_name_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/appnamedesc"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appnamebottom" />

        <TextView
            android:id="@+id/register_email_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins"
            android:text="@string/login_email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/ed_login_email"
            app:layout_constraintTop_toBottomOf="@+id/app_name_desc" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/email"
            app:layout_constraintBottom_toBottomOf="@+id/ed_login_email"
            app:layout_constraintStart_toStartOf="@+id/ed_login_email"
            app:layout_constraintTop_toTopOf="@id/ed_login_email" />

        <com.dicoding.picodiploma.nusvarna.customviews.BasicEditText
            android:id="@+id/ed_login_email"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:paddingRight="10dp"
            android:paddingLeft="40dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins"
            android:background="@drawable/edittext_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_desc" />

        <TextView
            android:id="@+id/forgetpass_pass_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/login_pass"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_forgetpass_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/ed_forgetpass_password"
            app:layout_constraintStart_toStartOf="@+id/ed_forgetpass_password"
            app:layout_constraintTop_toTopOf="@+id/ed_forgetpass_password" />

        <com.dicoding.picodiploma.nusvarna.customviews.PassEditText
            android:id="@+id/ed_forgetpass_password"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:background="@drawable/edittext_background"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            android:paddingRight="10dp"
            android:paddingLeft="40dp"
            android:hint="Password"
            app:layout_constraintEnd_toEndOf="@+id/ed_login_email"
            app:layout_constraintStart_toStartOf="@+id/ed_login_email"
            app:layout_constraintTop_toBottomOf="@+id/forgetpass_pass_desc" />

        <TextView
            android:id="@+id/forgot_your_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/lupa_pass"
            android:textColor="@color/main"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ed_forgetpass_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_forgetpass_password" />

        <com.dicoding.picodiploma.nusvarna.customviews.MyButton
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ed_forgetpass_password"
            app:layout_constraintStart_toStartOf="@+id/ed_forgetpass_password"
            app:layout_constraintTop_toBottomOf="@+id/forgot_your_pass" />

        <TextView
            android:id="@+id/go_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="80dp"
            android:layout_marginRight="72dp"
            android:fontFamily="@font/poppins"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <TextView
            android:id="@+id/go_to_register1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Register"
            android:textColor="@color/main"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginLeft="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/go_to_register"
            app:layout_constraintStart_toEndOf="@id/go_to_register"
            app:layout_constraintTop_toTopOf="@+id/go_to_register" />

        <ProgressBar
            android:id="@+id/login_progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>